# urban-research

./: .gitignore  README.md  data_sources.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
config/: settings.yaml
src/cityscope/: __init__.py  __main__.py  api.py  cli.py  geocoding.py
src/cityscope/core/: __init__.py  config.py  models.py  source.py
src/cityscope/sources/: bls_employment.py  census_population.py
src/urban_research/: __init__.py  __main__.py  cli.py
src/urban_research/core/: __init__.py  config.py  registry.py  storage.py
src/urban_research/dashboard/: app.py
src/urban_research/pipeline/: __init__.py  runner.py
src/urban_research/sources/: __init__.py  census_population.py
tests/: conftest.py  test_api.py  test_bls_employment.py  test_census_population.py  test_cli.py  test_config.py  test_geocoding.py  test_lookup.py  test_models.py  test_pipeline.py  test_registry.py  test_storage.py
