[project]
name = "urban-research"
version = "0.1.0"
description = "Real estate investment research data pipeline"
readme = "README.md"
authors = [
    { name = "Kaveh Karbasi", email = "kkarbasi@berkeley.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.2",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pydantic>=2.13.1",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "streamlit>=1.56.0",
]

[project.scripts]
urban-research = "urban_research.cli:cli"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
